Grandes Modificações: - Indexação no MariaDB Completo. - Algumas buscas no MariaDB. - Indexação no Lucene - Busca no Lucene. - Testes RegExp - Buscas com Lucene - Comandos usando o Gradle.